devel
-----

* Added replication metrics `arangodb_replication_initial_sync_bytes_received`
  for the number of bytes received during replication initial sync operations
  and `arangodb_replication_tailing_bytes_received` for the number of bytes
  received for replication tailing requests.
  Also added `arangodb_replication_failed_connects` to track the number of
  connection failures or non-OK response during replication.

* Added metrics `rocksdb_free_inodes` and `rocksdb_total_inodes` to track the
  number of free inodes and the total/maximum number of inodes for the file
  system the RocksDB database directory is located in. These metrics will 
  always be 0 on Windows.

* Fixed inifinite reload of the login window after logout of an LDAP user.

* Added startup option `--query.max-runtime` to limit the maximum runtime of
  all AQL queries to a specified threshold value (in seconds). By default,
  the threshold is 0, meaning that the runtime of AQL queries is not limited.
  Setting it to any positive value will restrict the runtime of all AQL
  queries unless it is overwritten in the per-query "maxRuntime" query option.
  Please note that setting this option will affect *all* queries in all
  databases, and also queries issues for administration and database-internal
  purposes.
  If a query exceeds the configured runtime, it will be killed on the next
  occasion when the query checks its own status. Killing is best effort, 
  so it is not guaranteed that a query will no longer than exactly the 
  configured amount of time.

* Updated rclone to 1.53.0.

* Fixed slightly wrong log level for authentication and also added login event
  to the standard log.

* Ensure that the argument to an AQL OPTIONS clause is always an object
  which does not contain any dynamic (run-time) values. Previously, this
  was only enforced for traversal options and options for data-modification
  queries. This change extends the check to all occurrences of OPTIONS.
